--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "mt-header",
+	"name": "mt-footer",
 	"version": "0.1.0",
-	"description": "Avalon Maxtrade Default Theme",
-	"author": "Avalon",
+	"description": "Example block scaffolded with Create Block tool.",
+	"author": "The WordPress Contributors",
 	"license": "GPL-2.0-or-later",
 	"main": "build/index.js",
 	"scripts": {
